@@ -1,3 +1,8 @@
+2008-01-19  Jean Brefort  <jean.brefort@normalesup.org>
+
+	* src/math/spacegroup.cpp: accept white spaces in transforms
+	descriptions in cif files. Fixes bug 1873908.
+
 2008-01-17  Noel O'Boyle <baoilleach@gmail.com>
 
 	* scripts/python/pybel.py, scripts/python/examples/testpybel.py:
